Overlap fix try 1

--- a/Week03/muotoilu.css
+++ b/Week03/muotoilu.css
@@ -97,13 +97,15 @@ h3{
     align-items: center;
     height: 100vh;
     max-width: inherit;
+    flex-shrink: 0;
+
 }
 
 .profile img{
     max-height: 500px;
     width: auto;
     border-radius: 5px;
-    margin: 0 20px;
+    margin: 0 20px
 }
 
 .profile div{
@@ -121,6 +123,8 @@ h3{
     height: 100vh;
     align-items: center;
     box-sizing: border-box;
+    flex-shrink: 0;
+
 }
 
 .Skill-Info h3{
@@ -145,6 +149,8 @@ h3{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-shrink: 0;
+
 }
 
 .Logo-Column{
